@@ -1,3 +1,10 @@
+2008--2-28 Jim Sack <jgsack@san.rr.com>
+	* src/GrampsDbUtils/_GedcomParse.py fix oversight from r10099
+	where eprefix was changed to event_prefix in gen/db/base.py
+	(problem detected with unittest gramps_cli_test.py .. yay!)
+	* src/gen/utils/test/callback_test.py fix unittest that had
+	assumed the existence of a global that need not exist
+
 2008-02-28  Benny Malengier <benny.malengier@gramps-project.org>
 	* src/DataViews/PersonView.py: don't crash on click, 1794
 	* src/PageView.py: don't crash on click, #1794
